crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__memory_grow_and_fill.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 11,
          "character": 16
        },
        "end": {
          "line": 11,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 16
        },
        "end": {
          "line": 25,
          "character": 19
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    }
  ]
}
