crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__ref_type.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 17,
          "character": 13
        },
        "end": {
          "line": 17,
          "character": 14
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected ref type"
    }
  ]
}
