crates/service/tests/diagnostics/snapshots/features__diagnostics__plain_instr__select_incorrect.snap
---
source: crates/service/tests/diagnostics/plain_instr.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 5,
          "character": 14
        },
        "end": {
          "line": 5,
          "character": 16
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "expected result type"
    },
    {
      "range": {
        "start": {
          "line": 9,
          "character": 14
        },
        "end": {
          "line": 9,
          "character": 23
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "there must be exactly one result type"
    },
    {
      "range": {
        "start": {
          "line": 13,
          "character": 27
        },
        "end": {
          "line": 13,
          "character": 29
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "unexpected immediate"
    },
    {
      "range": {
        "start": {
          "line": 17,
          "character": 14
        },
        "end": {
          "line": 17,
          "character": 38
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "there must be exactly one result type"
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 14
        },
        "end": {
          "line": 21,
          "character": 35
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "there must be exactly one result type"
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 14
        },
        "end": {
          "line": 25,
          "character": 22
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "there must be exactly one result type"
    },
    {
      "range": {
        "start": {
          "line": 29,
          "character": 14
        },
        "end": {
          "line": 29,
          "character": 30
        }
      },
      "severity": 1,
      "code": "plain-instr",
      "source": "wat",
      "message": "there must be exactly one result type"
    }
  ]
}
